<resources>
    <string name="app_name">TableLayout</string>
    <string name="txtTitulo">Lista de Produtos</string>
    <string name="txtProdutoA">Produto A</string>
    <string name="txtPrecoProdutoA">R$ 100,00</string>
    <string name="txtProdutoB">Produto B</string>
    <string name="txtPrecoProdutoB">R$ 200,00</string>
    <string name="txtProdutoC">Produto C</string>
    <string name="txtPrecoProdutoC">R$ 300,00</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnComprar">Comprar</string>
</resources>